Align Empty trash button correctly ...
... on the My Stuff page in Scratchr2 userstyle.

--- a/scratchr2.user.css
+++ b/scratchr2.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Scratchr2
 @namespace      github.com/mxmou
-@version        1.8.7
+@version        1.8.8
 @description    Makes the Scratchr2 site look more like Scratch 3.0
 @author         Maximouse (https://scratch.mit.edu/users/Maximouse)
 @homepageURL    https://github.com/mxmou/customize-scratch
@@ -950,6 +950,10 @@
         top: 44px
         border-color: inherit
         background-clip: border-box
+    .action-bar .inner .button
+        height: 46px
+    .action-bar .inner .button > span
+        line-height: 44px
     .box .box-content .media-list
         width: 942px
         margin: auto
